change decoder logic
