# openapi.go
@@ -2,7 +2,6 @@ package openapi
 
 import (
 	"fmt"
-	"github.com/disco07/lite-fiber/codec"
 	"github.com/getkin/kin-openapi/openapi3"
 	"github.com/getkin/kin-openapi/openapi3gen"
 	"reflect"
@@ -23,181 +22,18 @@ func registerOpenAPIOperation[ResponseBody, RequestBody any](
 
 	var reqBody RequestBody
 	valGen := reflect.ValueOf(&reqBody).Elem()
+	kind := valGen.Kind()
 
-	countPathParams := 0
-
-	for i := 0; i < valGen.NumField(); i++ {
-		fieldGeneric := valGen.Field(i)
-		fieldGenericType := fieldGeneric.Interface().(codec.TypeOf).TypeOf()
-
-		for j := 0; j < fieldGenericType.NumField(); j++ {
-			fieldTags := fieldGenericType.Field(j).Tag
-			fieldType := fieldGenericType.Field(j).Type
-			isPointer := fieldType.Kind() == reflect.Ptr
-
-			// Vérifier si le champ implémente ParamType
-			if paramType, ok := fieldGeneric.Interface().(codec.ParamType); ok {
-				var parameter *openapi3.Parameter
-
-				var tag, schemeTag, tpeTag, nameTag string
-
-				switch paramType.ParamType() {
-				case "query":
-					tag = fieldTags.Get("query")
-					parameter = openapi3.NewQueryParameter(tag)
-				case "header":
-					tag = fieldTags.Get("header")
-					schemeTag = fieldTags.Get("scheme")
-					tpeTag = fieldTags.Get("type")
-					nameTag = fieldTags.Get("name")
-
-					parameter = openapi3.NewHeaderParameter(tag)
-				case "path":
-					tag = fieldTags.Get("params")
-					parameter = openapi3.NewPathParameter(tag)
-					countPathParams++
-				case "cookie":
-					parameter = openapi3.NewCookieParameter(tag)
-				default:
-					return nil, fmt.Errorf("unknown parameter type: %s", paramType.ParamType())
-				}
-
-				ref := fmt.Sprintf("#/components/schemas/%s", tag)
-
-				var typeScheme []string
-				typeScheme = append(typeScheme, fieldType.String())
-
-				parameter.Schema = openapi3.NewSchemaRef(ref, &openapi3.Schema{})
-				parameter.Required = !isPointer
-
-				if paramType.ParamType() == "header" {
-					if strings.EqualFold(tag, "Authorization") {
-						scheme := "bearer"
-						tpe := "http"
-						name := "Authorization"
-
-						if nameTag != "" {
-							name = nameTag
-						}
-
-						if schemeTag != "" {
-							scheme = schemeTag
-						}
-
-						if tpeTag != "" {
-							tpe = tpeTag
-						}
-
-						sec := openapi3.NewSecurityRequirement()
-						sec[name] = []string{}
-
-						securityScheme := openapi3.NewSecurityScheme()
-						securityScheme.Type = tpe
-						securityScheme.Scheme = scheme
-
-						if operation.Security == nil {
-							operation.Security = openapi3.NewSecurityRequirements()
-						}
-
-						operation.Security.With(
-							sec,
-						)
-
-						var securitySchemes = make(map[string]*openapi3.SecuritySchemeRef)
-						securitySchemes[name] = &openapi3.SecuritySchemeRef{
-							Value: securityScheme,
-						}
-
-						s.OpenApiSpec.Components.SecuritySchemes[name] = securitySchemes[name]
-					} else {
-						paramSchema, ok := s.OpenApiSpec.Components.Schemas[tag]
-						if !ok {
-							var err error
-							paramSchema, err = generator.NewSchemaRefForValue(new(string), s.OpenApiSpec.Components.Schemas)
-							if err != nil {
-								return operation, err
-							}
-							s.OpenApiSpec.Components.Schemas[tag] = paramSchema
-						}
-
-						s.OpenApiSpec.Components.Headers[tag] = &openapi3.HeaderRef{
-							Value: &openapi3.Header{
-								Parameter: *parameter,
-							},
-						}
-
-						operation.Parameters = append(operation.Parameters, &openapi3.ParameterRef{
-							Ref: "#/components/parameters/" + tag,
-						})
-					}
-				} else {
-					paramSchema, ok := s.OpenApiSpec.Components.Schemas[tag]
-					if !ok {
-						var err error
-						paramSchema, err = generator.NewSchemaRefForValue(new(string), s.OpenApiSpec.Components.Schemas)
-						if err != nil {
-							return operation, err
-						}
-						s.OpenApiSpec.Components.Schemas[tag] = paramSchema
-					}
-
-					s.OpenApiSpec.Components.Parameters[tag] = &openapi3.ParameterRef{
-						Value: parameter,
-					}
-
-					operation.Parameters = append(operation.Parameters, &openapi3.ParameterRef{
-						Ref: "#/components/parameters/" + tag,
-					})
-				}
-			}
-
-			// Vérifier si le champ implémente ContentType
-			if contentType, ok := fieldGeneric.Interface().(codec.ContentType); ok {
-				bodySchema, ok := s.OpenApiSpec.Components.Schemas[fieldGenericType.Name()]
-				if !ok {
-					var err error
-					tp := reflect.New(fieldGenericType).Elem().Interface()
-
-					bodySchema, err = generator.NewSchemaRefForValue(tp, s.OpenApiSpec.Components.Schemas)
-					if err != nil {
-						return operation, err
-					}
-
-					for k := 0; k < fieldGenericType.NumField(); k++ {
-						field := fieldGenericType.Field(k)
-						if field.Type.Kind() != reflect.Ptr {
-							fieldTag := field.Tag.Get(contentType.StructTag())
-							bodySchema.Value.Required = append(bodySchema.Value.Required, fieldTag)
-						}
-					}
-
-					s.OpenApiSpec.Components.Schemas[fieldGenericType.Name()] = bodySchema
-				}
-
-				requestBody := openapi3.NewRequestBody()
-				content := openapi3.NewContentWithSchemaRef(
-					openapi3.NewSchemaRef(fmt.Sprintf(
-						"#/components/schemas/%s",
-						fieldGenericType.Name(),
-					), &openapi3.Schema{}),
-					[]string{contentType.ContentType()},
-				)
-
-				requestBody.WithContent(content)
-
-				operation.RequestBody = &openapi3.RequestBodyRef{
-					Value: requestBody,
-				}
-
-				continue
-			}
-		}
+	if kind != reflect.Struct {
+		return nil, fmt.Errorf("request body must be a struct")
 	}
 
-	routePath, pathParams := parseRoutePath(path)
-	if len(pathParams) != countPathParams {
-		return nil, fmt.Errorf("path params mismatch: %d declared, %d required", len(pathParams), countPathParams)
+	err := register(s, operation, valGen)
+	if err != nil {
+		return nil, err
 	}
+
+	routePath, _ := parseRoutePath(path)
 
 	tag := tagFromType(*new(ResponseBody))
 
@@ -255,6 +91,222 @@ func registerOpenAPIOperation[ResponseBody, RequestBody any](
 	s.OpenApiSpec.AddOperation(routePath, method, operation)
 
 	return operation, nil
+}
+
+func register(s *App, operation *openapi3.Operation, dstVal reflect.Value) error {
+	dstType := dstVal.Type()
+
+	for i := 0; i < dstType.NumField(); i++ {
+		field := dstType.Field(i)
+		fieldVal := dstVal.Field(i)
+		fieldType := field.Type
+		tag := field.Tag.Get("lite")
+
+		// check if kind is a pointer and elem is a not string, float, int, bool continue to next field
+		switch fieldVal.Kind() {
+		case reflect.Ptr:
+			switch fieldVal.Elem().Kind() {
+			case reflect.Struct, reflect.Slice, reflect.Map:
+				panic("not implemented")
+			default:
+			}
+
+		case reflect.Invalid, reflect.Uintptr, reflect.Chan, reflect.Func, reflect.UnsafePointer:
+			panic("not implemented")
+		default:
+		}
+
+		if fieldVal.Kind() == reflect.Struct && tag == "" {
+			// Recursively handle nested structs
+			if err := register(s, operation, fieldVal); err != nil {
+				return err
+			}
+
+			continue
+		}
+
+		isRequired := fieldType.Kind() != reflect.Ptr
+
+		if tag == "" {
+			tag = field.Name
+		}
+
+		tagParts := strings.Split(tag, "=")
+
+		var parameter *openapi3.Parameter
+		var scheme, tpe, name string
+
+		tagType, tagName := tagParts[0], tagParts[1]
+
+		ref := fmt.Sprintf("#/components/schemas/%s", tagName)
+
+		switch tagType {
+		case "path":
+			parameter = openapi3.NewPathParameter(tagName)
+			err := setParamSchema(s, operation, tagName, parameter, isRequired, ref)
+			if err != nil {
+				return err
+			}
+		case "query":
+			parameter = openapi3.NewQueryParameter(tagName)
+			err := setParamSchema(s, operation, tagName, parameter, isRequired, ref)
+			if err != nil {
+				return err
+			}
+		case "header":
+			parameter = openapi3.NewHeaderParameter(tagName)
+			parameter.Required = isRequired
+			var isAuth bool
+			if strings.Contains(tagName, ",") {
+				tagDetails := strings.Split(tagName, ",")
+				tagName = tagDetails[0]
+
+				for _, detail := range tagDetails[1:] {
+					switch detail {
+					case "isauth":
+						isAuth = true
+						tpe = "http"
+						name = "Authorization"
+						scheme = "bearer"
+					case "scheme":
+						scheme = detail
+					}
+				}
+			}
+
+			if isAuth {
+				setSecurityScheme(s, operation, name, tpe, scheme)
+			} else {
+				err := setHeaderScheme(s, operation, tag, parameter)
+				if err != nil {
+					return err
+				}
+			}
+		case "cookie":
+			parameter = openapi3.NewCookieParameter(tagName)
+			err := setParamSchema(s, operation, tagName, parameter, isRequired, ref)
+			if err != nil {
+				return err
+			}
+		case "req":
+			//if tagName == "body" {
+			//	bodySchema, ok := s.OpenApiSpec.Components.Schemas[field.Name]
+			//	if !ok {
+			//		var err error
+			//		tp := reflect.New(fieldGenericType).Elem().Interface()
+			//
+			//		bodySchema, err = generator.NewSchemaRefForValue(tp, s.OpenApiSpec.Components.Schemas)
+			//		if err != nil {
+			//			return operation, err
+			//		}
+			//
+			//		for k := 0; k < fieldGenericType.NumField(); k++ {
+			//			field := fieldGenericType.Field(k)
+			//			if field.Type.Kind() != reflect.Ptr {
+			//				fieldTag := field.Tag.Get(contentType.StructTag())
+			//				bodySchema.Value.Required = append(bodySchema.Value.Required, fieldTag)
+			//			}
+			//		}
+			//
+			//		s.OpenApiSpec.Components.Schemas[fieldGenericType.Name()] = bodySchema
+			//	}
+			//
+			//	requestBody := openapi3.NewRequestBody()
+			//	content := openapi3.NewContentWithSchemaRef(
+			//		openapi3.NewSchemaRef(fmt.Sprintf(
+			//			"#/components/schemas/%s",
+			//			fieldGenericType.Name(),
+			//		), &openapi3.Schema{}),
+			//		[]string{contentType.ContentType()},
+			//	)
+			//
+			//	requestBody.WithContent(content)
+			//
+			//	operation.RequestBody = &openapi3.RequestBodyRef{
+			//		Value: requestBody,
+			//	}
+			//
+			//	continue
+			//}
+
+		default:
+			return fmt.Errorf("unknown parameter type: %s", tagType)
+		}
+	}
+
+	return nil
+}
+
+func setHeaderScheme(s *App, operation *openapi3.Operation, tag string, parameter *openapi3.Parameter) error {
+	paramSchema, ok := s.OpenApiSpec.Components.Schemas[tag]
+	if !ok {
+		var err error
+		paramSchema, err = generator.NewSchemaRefForValue(new(string), s.OpenApiSpec.Components.Schemas)
+		if err != nil {
+			return err
+		}
+		s.OpenApiSpec.Components.Schemas[tag] = paramSchema
+	}
+
+	s.OpenApiSpec.Components.Headers[tag] = &openapi3.HeaderRef{
+		Value: &openapi3.Header{
+			Parameter: *parameter,
+		},
+	}
+
+	operation.Parameters = append(operation.Parameters, &openapi3.ParameterRef{
+		Ref: "#/components/parameters/" + tag,
+	})
+	return nil
+}
+
+func setSecurityScheme(s *App, operation *openapi3.Operation, name string, tpe string, scheme string) {
+	sec := openapi3.NewSecurityRequirement()
+	sec[name] = []string{}
+
+	securityScheme := openapi3.NewSecurityScheme()
+	securityScheme.Type = tpe
+	securityScheme.Scheme = scheme
+
+	if operation.Security == nil {
+		operation.Security = openapi3.NewSecurityRequirements()
+	}
+
+	operation.Security.With(
+		sec,
+	)
+
+	var securitySchemes = make(map[string]*openapi3.SecuritySchemeRef)
+	securitySchemes[name] = &openapi3.SecuritySchemeRef{
+		Value: securityScheme,
+	}
+
+	s.OpenApiSpec.Components.SecuritySchemes[name] = securitySchemes[name]
+}
+
+func setParamSchema(s *App, operation *openapi3.Operation, tag string, parameter *openapi3.Parameter, isRequired bool, ref string) error {
+	parameter.Schema = openapi3.NewSchemaRef(ref, &openapi3.Schema{})
+	parameter.Required = isRequired
+
+	paramSchema, ok := s.OpenApiSpec.Components.Schemas[tag]
+	if !ok {
+		var err error
+		paramSchema, err = generator.NewSchemaRefForValue(new(string), s.OpenApiSpec.Components.Schemas)
+		if err != nil {
+			return err
+		}
+		s.OpenApiSpec.Components.Schemas[tag] = paramSchema
+	}
+
+	s.OpenApiSpec.Components.Parameters[tag] = &openapi3.ParameterRef{
+		Value: parameter,
+	}
+
+	operation.Parameters = append(operation.Parameters, &openapi3.ParameterRef{
+		Ref: "#/components/parameters/" + tag,
+	})
+
+	return nil
 }
 
 func tagFromType(v any) string {
